# style_transfer

./: .gitignore  LICENSE  README.md  compile.ps1  main_image_styler.py  main_style_trainer.py  pyproject.toml  requirements-dev.txt  requirements.txt  style_transfer.spec
docs/: add_style.ipynb  built-in_style_chains.md  code_metrics.ipynb  comic_style_search.md  fix_style_trainer.md  harry-potter-PRD.md  kaggle_style_training.ipynb  multi_pic_trainer.md  redesign.md  refactoring_plan.md  style_analysis.ipynb  style_transfer_implementation.md
docs/general/: CycleGAN_model_implementation.md  GAN-cartoonizer-overview.md  GAN_intro.md  GAN_styling.md  cubism_style_creation.md
sample_images/: see-firefire.yml
sample_images/style-chains/: Pastel.yml  (+11 more)
scripts/: _build_cockpit_nb.py  _patch_smoke_batches.py  _patch_style_analysis_nb.py  _print_nb.py  add_CNN_style.ipynb  add_style.ipynb  batch_styler.ps1  batch_styler.py  benchmark.py  code_metrics.ipynb  create_sample_overview.bat  download_animegan.py  download_art.ipynb  download_pretrained.py  export_cyclegan_to_onnx.ipynb  gen_palette_ico_temp.py  index.md  kaggle_multi_pic_trainer.ipynb  kaggle_style_training.ipynb  kaggle_trainer.ipynb  kaggle_training_helper.py  setup_models.py  style_analysis.ipynb
src/: app.py
style_chains/: catalog.json
styles/: catalog.json
tests/: conftest.py  helpers.py
training/: add_GAN_style.ipynb  add_style_chain.ipynb  add_style_chain_helper.py  add_style_helper.ipynb  add_style_helper.py  index.md  kaggle_multi_pic_trainer.ipynb  kaggle_trainer.ipynb  kaggle_training_helper.py
(+109 files in other folders)
